Solve the annotation bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #debug=true
 #logging.level.tabby=DEBUG
 logging.level.tabby=INFO
+server.port=8082
 # neo4j
 #spring.data.neo4j.uri=bolt://127.0.0.1:7687
 #spring.data.neo4j.username=neo4j
