update endpoint extract

--- a/config/settings.properties
+++ b/config/settings.properties
@@ -1,7 +1,9 @@
+tabby.endpoint.enable = false
+
 # build code property graph
 tabby.build.enable                    = true
 # jdk settings
-tabby.build.isJDKProcess              = true
+tabby.build.isJDKProcess              = false
 tabby.build.withAllJDK                = false
 tabby.build.excludeJDK                = false
 tabby.build.isJDKOnly                 = false
@@ -14,8 +16,8 @@ tabby.build.isFullCallGraphCreate     = true
 
 # targets to analyse
 #tabby.build.target                    = path/to/target
-tabby.build.target                    = jar2
-# tabby.build.libraries                 = path/to/lib
+tabby.build.target                    = testjar2
+# tabby.build.libraries                 = testjar
 
 # load to neo4j
 tabby.load.enable                     = true
